<resources>
    <string name="app_name">HomeWork_06</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="remove_user">Remove User</string>
    <string name="active_users">Active Users</string>>
    <string name="_0">0</string>
    <string name="deleted_users">Deleted Users</string>
    <string name="existing_email">Existing Email</string>
    <string name="new_email">new Email</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
</resources>