<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asb"
    tools:context=".Update">


    <EditText
        android:id="@+id/edExEmail"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/existing_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#E1F5FE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editNewEmail"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#4A7E0E"
        android:text="@string/update"
        android:textColor="#F1F8E9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewEmail">
    </androidx.appcompat.widget.AppCompatButton>
</androidx.constraintlayout.widget.ConstraintLayout>